fix mcp cookbook link

--- a/advanced-features/mcp.mdx
+++ b/advanced-features/mcp.mdx
@@ -10,7 +10,7 @@ MCP provides a mechanism for Chainlit applications to connect to either server-s
  <Card
     title="Chainlit MCP Cookbook"
     icon="github"
-    href="https://github.com/Chainlit/cookbook/blob/main/openai-whisper/app.py"
+    href="https://github.com/Chainlit/cookbook/tree/main/mcp"
   >
     End to end cookbook example showcasing MCP tool calling with Claude.
   </Card>
