--- a/advanced-features/mcp.mdx
+++ b/advanced-features/mcp.mdx
@@ -15,6 +15,10 @@ MCP provides a mechanism for Chainlit applications to connect to either server-s
     End to end cookbook example showcasing MCP tool calling with Claude.
   </Card>
 
+### Contact us for Enterprise Ready MCP
+
+We're working with companies to create their MCP stacks, enabling AI agents to consume their data and context in standardized ways. Fill out this [form](https://docs.google.com/forms/d/e/1FAIpQLSdObSIeIFt4nHppZ6r2rIoEe-jZRo4CqxbmRKKgb-ZsSPONnQ/viewform?usp=dialog).
+
 ## Connections Types
 
 Chainlit supports two types of MCP connections:
