--- a/advanced-features/mcp.mdx
+++ b/advanced-features/mcp.mdx
@@ -15,6 +15,16 @@ MCP provides a mechanism for Chainlit applications to connect to either server-s
     End to end cookbook example showcasing MCP tool calling with Claude.
   </Card>
 
+<Frame caption="Connect to an MCP server">
+  <video
+    controls
+    autoPlay
+    loop
+    muted
+    src="https://github.com/user-attachments/assets/6119341f-fb5d-4c3f-9f10-735a74841fd6"
+  />
+</Frame>
+
 ### Contact us for Enterprise Ready MCP
 
 We're working with companies to create their MCP stacks, enabling AI agents to consume their data and context in standardized ways. Fill out this [form](https://docs.google.com/forms/d/e/1FAIpQLSdObSIeIFt4nHppZ6r2rIoEe-jZRo4CqxbmRKKgb-ZsSPONnQ/viewform?usp=dialog).
