Update the import of AzureStorageClient
AzureStorageClient is now moved to chainlit.data.storage_clients.azure

--- a/data-layers/sqlalchemy.mdx
+++ b/data-layers/sqlalchemy.mdx
@@ -92,7 +92,7 @@ Import the custom data layer and storage client, and indicate which data layer t
 ```python
 import chainlit as cl
 from chainlit.data.sql_alchemy import SQLAlchemyDataLayer
-from chainlit.data.storage_clients import AzureStorageClient
+from chainlit.data.storage_clients.azure import AzureStorageClient
 
 storage_client = AzureStorageClient(account_url="<your_account_url>", container="<your_container>")
 
