--- a/llmops/enterprise.mdx
+++ b/llmops/enterprise.mdx
@@ -5,8 +5,8 @@ title: Enterprise
 If your organization can't use third party cloud services for data hosting, we can provide your company with a self-hostable Literal AI docker image (under commercial license).
 
 <Note>
-  To request access you can contact us here ->
-  https://forms.gle/BX3UNBLmTF75KgZVA.
+Please fill this [form](https://docs.google.com/forms/d/e/1FAIpQLSdPVGqfuaWSC2DfunR6cY4C7kUHl0c2W7DnhzsF9bmMxrVpkg/viewform?usp=header
+) for enterprise support.
 </Note>
 
 ## Define your Literal AI Server
@@ -32,10 +32,4 @@ Using your own Literal AI instance, you will still need to provide a valid API k
 
 Once activated, your chats and elements will be stored on your own server.
 
-## Debug Mode
 
-You can enable the new debug mode by adding `-d` to your `chainlit run` command. You will see a debug button below each message taking you to the trace/prompt playground.
-
-<Frame caption="Debug example">
-  <img src="/images/debug.gif" />
-</Frame>
