--- a/llmops/literalai.mdx
+++ b/llmops/literalai.mdx
@@ -8,11 +8,6 @@ description: Literal AI is a **collaborative platform** for building production-
 
 [Literal AI](https://docs.literalai.com) is a collaborative **observability, evaluation and analytics** platform for building production-grade LLM apps. Literal AI offers multimodal logging, including vision, audio, and video.
 
-<Note>
-Please fill this [form](https://docs.google.com/forms/d/e/1FAIpQLSdPVGqfuaWSC2DfunR6cY4C7kUHl0c2W7DnhzsF9bmMxrVpkg/viewform?usp=header
-) for enterprise support.
-</Note>
-
 Literal AI can be leveraged as a data persistence solution, allowing you to quickly enable data storage and analysis for your Chainlit app without setting up your own infrastructure.
 
 <Note>
@@ -64,6 +59,13 @@ Once activated, your chats and elements will be persisted on Literal AI.
 </Step>
 </Steps>
 
+## Debug Mode
+
+You can enable the new debug mode by adding `-d` to your `chainlit run` command. You will see a debug button below each message taking you to the trace/prompt playground.
+
+<Frame caption="Debug example">
+  <img src="/images/debug.gif" />
+</Frame>
 
 ## Deactivation
 
