--- a/integrations/litellm.mdx
+++ b/integrations/litellm.mdx
@@ -12,7 +12,7 @@ The benefits of using LiteLLM Proxy with Chainlit is:
 
 <Warning>
   You shouldn't configure this integration if you're already using another
-  integration like Haystack, Langchain or LlamaIndex. Both integrations would
+  integration like Langchain or LlamaIndex. Both integrations would
   record the same generation and create duplicate steps in the UI.
 </Warning>
 
