--- a/integrations/mistralai.mdx
+++ b/integrations/mistralai.mdx
@@ -6,7 +6,7 @@ You will get the full generation details (prompt, completion, tokens per second.
 
 <Warning>
   You shouldn't configure this integration if you're already using another
-  integration like Haystack, Langchain or LlamaIndex. Both integrations would
+  integration like Langchain or LlamaIndex. Both integrations would
   record the same generation and create duplicate steps in the UI.
 </Warning>
 
