--- a/integrations/openai.mdx
+++ b/integrations/openai.mdx
@@ -16,7 +16,7 @@ You need to add `cl.instrument_openai()` after creating your OpenAI client.
 
 <Warning>
   You shouldn't configure this integration if you're already using another
-  integration like Haystack, Langchain or LlamaIndex. Both integrations would
+  integration like Langchain or LlamaIndex. Both integrations would
   record the same generation and create duplicate steps in the UI.
 </Warning>
 
