add missing column in SQLAlchemy table schema

--- a/data-layers/sqlalchemy.mdx
+++ b/data-layers/sqlalchemy.mdx
@@ -48,6 +48,7 @@ CREATE TABLE IF NOT EXISTS steps (
     "showInput" TEXT,
     "language" TEXT,
     "indent" INT,
+    "defaultOpen" BOOLEAN,
     FOREIGN KEY ("threadId") REFERENCES threads("id") ON DELETE CASCADE
 );
 
