--- a/api-reference/elements/video.mdx
+++ b/api-reference/elements/video.mdx
@@ -45,3 +45,6 @@ async def main():
         elements=elements,
     ).send()
 ```
+
+
+// Why can't we add auto_play attribute in Video Element it would help in many projects
