remove literal ai reference

--- a/guides/migration/1.1.300.mdx
+++ b/guides/migration/1.1.300.mdx
@@ -94,7 +94,7 @@ Separating these two concepts was the right thing to do to:
 1. Provide an even better UX (see the new [Chain of Thought](#chain-of-thought-rework)).
 2. Provide an even better debugging experience.
 
-You can enable the new debug mode by adding `-d` to your `chainlit run` command. If your data layer supports it (like [Literal AI](https://literalai.com)), you will see a debug button below each message taking you to the trace/prompt playground.
+You can enable the new debug mode by adding `-d` to your `chainlit run` command. If your data layer supports it, you will see a debug button below each message taking you to the trace/prompt playground.
 
 <Frame caption="Debug example">
   <img src="/images/debug.gif" />
