--- a/data-layers/overview.mdx
+++ b/data-layers/overview.mdx
@@ -67,3 +67,12 @@ def get_data_layer():
 
 Follow the [reference](/api-reference/data-persistence/custom-data-layer) for an exhaustive list of the methods your custom data layer needs to implement.
 
+## Cloud Storage Providers supported out-of-the-box
+
+- AWS S3
+- Azure
+  - Blob Storage
+  - Data Lake Storage (ADLS) Gen2
+- Google Cloud Storage
+  - via Private Key
+  - via Application Default Credentials (e.g. in Google Cloud Run)
