--- a/concepts/starters.mdx
+++ b/concepts/starters.mdx
@@ -14,24 +14,25 @@ async def set_starters():
             label="Morning routine ideation",
             message="Can you help me create a personalized morning routine that would help increase my productivity throughout the day? Start by asking me about my current habits and what activities energize me in the morning.",
             icon="/public/idea.svg",
-            ),
+        ),
 
         cl.Starter(
             label="Explain superconductors",
             message="Explain superconductors like I'm five years old.",
             icon="/public/learn.svg",
-            ),
+        ),
         cl.Starter(
             label="Python script for daily email reports",
             message="Write a script to automate sending daily email reports in Python, and walk me through how I would set it up.",
             icon="/public/terminal.svg",
-            ),
+            command="code",
+        ),
         cl.Starter(
             label="Text inviting friend to wedding",
             message="Write a text asking a friend to be my plus-one at a wedding next month. I want to keep it super short and casual, and offer an out.",
             icon="/public/write.svg",
-            )
-        ]
+        )
+    ]
 # ...
 ```
 
