feat: add scope to Amazon Gognito

--- a/authentication/oauth.mdx
+++ b/authentication/oauth.mdx
@@ -130,6 +130,7 @@ You need to set the following environment variables:
 - `OAUTH_COGNITO_CLIENT_ID`: Client ID
 - `OAUTH_COGNITO_CLIENT_SECRET`: Client secret
 - `OAUTH_COGNITO_DOMAIN`: Cognito Domain
+- `OAUTH_COGNITO_SCOPE`: Access level
 
 ### Keycloak
 
