feat: add localstack to supported cloud providers

--- a/data-layers/overview.mdx
+++ b/data-layers/overview.mdx
@@ -70,6 +70,7 @@ Follow the [reference](/api-reference/data-persistence/custom-data-layer) for an
 ## Cloud Storage Providers supported out-of-the-box
 
 - AWS S3
+  - LocalStack via `DEV_AWS_ENDPOINT` environment variable
 - Azure
   - Blob Storage
   - Data Lake Storage (ADLS) Gen2
