--- a/backend/config/ui.mdx
+++ b/backend/config/ui.mdx
@@ -4,7 +4,7 @@ title: UI
 
 ### Options
 
-<ParamField path="name" type="str" default="My Chatbot">
+<ParamField path="name" type="str" default="'Assistant'">
   The name of both the application and the chatbot.
 </ParamField>
 
@@ -22,15 +22,12 @@ title: UI
   calls, or show it in full.
 </ParamField>
 
-<ParamField path="default_collapse_content" type="bool" default={true}>
-  When handling large text content we collapse it for keeping the threads
-  concise. You can disable manually disable this behavior.
+<ParamField path="default_theme" type="Literal['light', 'dark']" default="'dark'">
+  Name of the theme used by default
 </ParamField>
 
-<ParamField path="default_expand_message" type="bool" default={false}>
-  Sub-messages are hiden by default, you can "expand" the parent message to show
-  those messages. Toggling this setting will display the sub-messages by
-  default.
+<ParamField path="layout" type="Literal['default', 'wide']" default="'open'">
+  Name of the layout used by default
 </ParamField>
 
 <ParamField path="github" type="str" optional>
@@ -38,52 +35,123 @@ title: UI
   display the link to Chainlit repo.
 </ParamField>
 
+<ParamField path="custom_css" type="str" optional>
+  Custom CSS file that allows you to customize the UI
+</ParamField>
+
+<ParamField path="custom_css_attributes" type="str" optional>
+  Custom CSS file tag attributes, i.e. `<stylesheet src="public/custom.css" ... ></stylesheet>`
+</ParamField>
+
+<ParamField path="custom_js" type="str" optional>
+  Custom JavaScript file that allows you to customize the UI
+</ParamField>
+
+<ParamField path="custom_js_attributes" type="str" default="defer">
+  Custom JavaScript file tag attributes, i.e. `<script src="public/custom.js" ... ></script>`
+</ParamField>
+
+<ParamField path="alert_style" type="Literal['classic', 'modern']" default="'classic'">
+  Switch between two available alert styles:
+  - `'classic'`: Traditional left-border style
+  - `'modern'`: Rounded corners with softer borders and transparent background
+</ParamField>
+
+<ParamField path="login_page_image" type="str" optional>
+  Custom image displayed as the background on the login page
+</ParamField>
+
+<ParamField path="login_page_image_filter" type="str" optional>
+  Filter applied to the custom background image on the login page
+</ParamField>
+
+<ParamField path="login_page_image_dark_filter" type="str" optional>
+  Filter applied to the custom background image on the login page when the dark theme is selected
+</ParamField>
+
+<ParamField path="custom_meta_image_url" type="str" optional>
+  Content of the `<meta property="og:image">` tag used for site preview
+</ParamField>
+
+<ParamField path="logo_file_url" type="str" optional>
+  URL of the image used as the application logo on the welcome screen and during login/logout
+</ParamField>
+
+<ParamField path="default_avatar_file_url" type="str" optional>
+  URL of the image used as the avatar for messages sent by the assistant
+</ParamField>
+
+<ParamField path="custom_build" type="str" optional>
+  Directory containing custom frontend production build files, if applicable
+</ParamField>
+
+<ParamField path="header_links" type="List[HeaderLink]" optional>
+  Additional links displayed in the header next to (or replacing, if not provided) the GitHub link
+</ParamField>
+
+
 ### Default configuration
 
 ```toml
 [UI]
-# Name of the app and chatbot.
-name = "Chatbot"
+# Name of the assistant.
+name = "Assistant"
 
-# Description of the app and chatbot. This is used for HTML tags.
+# default_theme = "dark"
+
+# layout = "wide"
+
+# default_sidebar_state = "open"
+
+# Description of the assistant. This is used for HTML tags.
 # description = ""
-
-# Large size content are by default collapsed for a cleaner ui
-default_collapse_content = true
-
-# The default value for the expand messages settings.
-default_expand_messages = false
 
 # Chain of Thought (CoT) display mode. Can be "hidden", "tool_call" or "full".
 cot = "full"
-
-# Link to your github repo. This will add a github button in the UI's header.
-# github = ""
 
 # Specify a CSS file that can be used to customize the user interface.
 # The CSS file can be served from the public directory or via an external link.
 # custom_css = "/public/test.css"
 
-[UI.theme]
-  #layout = "wide"
-  #font_family = "Inter, sans-serif"
-  # Override default MUI light theme. (Check theme.ts)
-  [UI.theme.light]
-      #background = "#FAFAFA"
-      #paper = "#FFFFFF"
+# Specify additional attributes for a custom CSS file
+# custom_css_attributes = "media=\\\"print\\\""
 
-      [UI.theme.light.primary]
-          #main = "#F80061"
-          #dark = "#980039"
-          #light = "#FFE7EB"
+# Specify a JavaScript file that can be used to customize the user interface.
+# The JavaScript file can be served from the public directory.
+# custom_js = "/public/test.js"
 
-  # Override default MUI dark theme. (Check theme.ts)
-  [UI.theme.dark]
-      #background = "#FAFAFA"
-      #paper = "#FFFFFF"
+# The style of alert boxes. Can be "classic" or "modern".
+alert_style = "classic"
 
-      [UI.theme.dark.primary]
-          #main = "#F80061"
-          #dark = "#980039"
-          #light = "#FFE7EB"
+# Specify additional attributes for custom JS file
+# custom_js_attributes = "async type = \\\"module\\\""
+
+# Custom login page image, relative to public directory or external URL
+# login_page_image = "/public/custom-background.jpg"
+
+# Custom login page image filter (Tailwind internal filters, no dark/light variants)
+# login_page_image_filter = "brightness-50 grayscale"
+# login_page_image_dark_filter = "contrast-200 blur-sm"
+
+
+# Specify a custom meta image url.
+# custom_meta_image_url = "https://chainlit-cloud.s3.eu-west-3.amazonaws.com/logo/chainlit_banner.png"
+
+# Load assistant logo directly from URL.
+logo_file_url = ""
+
+# Load assistant avatar image directly from URL.
+default_avatar_file_url = ""
+
+# Specify a custom build directory for the frontend.
+# This can be used to customize the frontend code.
+# Be careful: If this is a relative path, it should not start with a slash.
+# custom_build = "./public/build"
+
+# Specify optional one or more custom links in the header.
+# [[UI.header_links]]
+#     name = "Issues"
+#     display_name = "Report Issue"
+#     icon_url = "https://avatars.githubusercontent.com/u/128686189?s=200&v=4"
+#     url = "https://github.com/Chainlit/chainlit/issues"
 ```
