Update docs: 2.5.5...2.6.0 changes (#248)
* feat: AskElementMessage

* fix: use real AskActionMessage name

* feat: ADC support

* feat: add command usage example to starters

* feat: add scope to Amazon Gognito

* feat: add localstack to supported cloud providers

* refactor: update UI settings

--- a/data-layers/overview.mdx
+++ b/data-layers/overview.mdx
@@ -67,3 +67,13 @@ def get_data_layer():
 
 Follow the [reference](/api-reference/data-persistence/custom-data-layer) for an exhaustive list of the methods your custom data layer needs to implement.
 
+## Cloud Storage Providers supported out-of-the-box
+
+- AWS S3
+  - LocalStack via `DEV_AWS_ENDPOINT` environment variable
+- Azure
+  - Blob Storage
+  - Data Lake Storage (ADLS) Gen2
+- Google Cloud Storage
+  - via Private Key
+  - via Application Default Credentials (e.g. in Google Cloud Run)
