--- a/deploy/copilot.mdx
+++ b/deploy/copilot.mdx
@@ -12,7 +12,7 @@ Software Copilot are a new kind of assistant embedded in your app/product. They 
 
 | Message | Streaming | Elements | Audio | Ask User | Chat History | Chat Profiles | Feedback |
 | ------- | --------- | -------- | ----- | -------- | ------------ | ------------- | -------- |
-| ✅      | ✅        | ✅       | ✅    | ✅       | ❌           | ✅            | ✅       |
+| ✅      | ✅        | ✅       | ✅    | ✅       | ✅           | ✅            | ✅       |
 
 ## Embedding the Copilot
 
@@ -52,6 +52,39 @@ First, make sure your Chainlit server is running. Then, add the following script
 That's it! You should now see a floating button on the bottom right corner of your website. Clicking on it will open the Copilot.
 
 You can programmatically toggle the copilot with `window.toggleChainlitCopilot()`.
+
+## Thread Persistence
+
+The Copilot now supports persistent storage of the `threadId` in the browser's localStorage, enabling chat restoration after a page reload. This feature provides two JavaScript utility functions for managing thread persistence:
+
+### getChainlitCopilotThreadId()
+
+Retrieves the current threadId from localStorage.
+
+**Returns:** `string | null` - The current threadId or null if not found
+
+```javascript
+const threadId = window.getChainlitCopilotThreadId();
+console.log("Current thread ID:", threadId);
+```
+
+### clearChainlitCopilotThreadId(newThreadId?)
+
+Clears the existing threadId from localStorage. Optionally sets a new one.
+
+**Parameters:**
+- `newThreadId?` (optional): `string` - A new threadId to set after clearing
+
+```javascript
+// Start a new thread programmatically
+window.clearChainlitCopilotThreadId();
+
+// Or with predefined ID
+const newThreadId = crypto.randomUUID();
+window.clearChainlitCopilotThreadId(newThreadId);
+```
+
+These functions provide developers with greater control over thread management and session continuity in the Copilot experience.
 
 ## Widget Configuration
 
