--- a/deploy/copilot.mdx
+++ b/deploy/copilot.mdx
@@ -111,6 +111,8 @@ export interface IWidgetConfig {
   customCssUrl?: string;
   // allows passing extra query parameters in API requests to the Chainlit server
   additionalQueryParamsForAPI?: Record<string, string>;
+  // Start widget container expanded, i.e. wide
+  expanded?: boolean;
 }
 ```
 
