--- a/api-reference/step-class.mdx
+++ b/api-reference/step-class.mdx
@@ -20,7 +20,7 @@ The `Step` class is a Python Context Manager that can be used to create steps in
   https://react-code-blocks-rajinwonderland.vercel.app/?path=/story/codeblock--supported-languages
   for a list of supported languages.
 </ParamField>
-<ParamField path="show_input" type="Union[bool, str]" default="False" optional>
+<ParamField path="show_input" type="Union[bool, str]" default={false} optional>
   By default only the output of the step is shown. Set this to `True` to also
   show the input. You can also set this to a language like `json` or `python` to
   syntax highlight the input.
