--- a/backend/config/ui.mdx
+++ b/backend/config/ui.mdx
@@ -2,7 +2,7 @@
 title: UI
 ---
 
-### Options
+## Options
 
 <ParamField path="name" type="str" default="'Assistant'">
   The name of both the application and the chatbot.
@@ -90,7 +90,7 @@ title: UI
 </ParamField>
 
 
-### Default configuration
+## Default configuration
 
 ```toml
 [UI]
